<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mastermind</string>
    <string name="action_rules">Règles</string>
    <string name="nbt">Nombre de tentatives :</string>
    <string name="rules">
        Le but de ce jeu est de deviner la bonne combinaison de couleurs. Le joueur ne dispose que d\'un maximum de 12 tentatives pour trouver cette combinaison. A chaque tentative, le joueur propose une combinaison de 4 couleurs.
        \nSi la combinaison présentée est correcte, la partie s\'arrête.
        \nSi la combinaison est incorrecte, mais que certaines couleurs sont bien présentes dans la combinaison :\n
        - Si une ou plusieurs couleurs sont à la bonne place, des ronds rouges en indiqueront le nombre.\n
        - Si une ou plusieurs couleurs sont à la mauvaise place, des ronds blancs en indiqueront le nombre.
    </string>
    <string name="zero">0</string>
    <string name="txt_combinaisons">Combinaisons précédentes</string>
    <string name="verifier">Vérifier</string>
    <string name="nouveau">Nouveau</string>
    <string name="logo">Logo Mastermind</string>
    <string name="erreur">Erreur !</string>
    <string name="erreur_contenu">"Votre liste de couleurs est incomplète !</string>
    <string name="felicitations">Félicitations !</string>
    <string name="felicitations_contenu">Vous avez trouvé la bonne combinaison !</string>
    <string name="perdu">Perdu !</string>
    <string name="perdu_contenu">Vous aurez plus de chance la prochaine fois !</string>

</resources>
